2014-03-27  Jean-Louis Martineau <martineau@zmanda.com>
	* application-src/ampgsql.pl: Do not close STDIN and STDERR.

2014-03-27  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c: Add read function that use the mainloop.
	* amar-src/amar.h: Add read function that use the mainloop.
	* amar-src/amarchiver.c: Use new event interface.
	* perl/Amanda/Archive.swg: Swig new event interface.
	* perl/Amanda/MainLoop.swg (run_until_empty): New method.

2014-03-25  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/conffile.c: Add CNF_REST_API_PORT
	* common-src/conffile.h: Add CNF_REST_API_PORT
	* perl/Amanda/Config.swg: Add CNF_REST_API_PORT
	* server-src/amanda-rest-server.pl: New script to start/stop the rest
	  server.
	* server-src/Makefile.am (sbin_SCRIPTS_PERL): Add amanda-rest-server.
	* man/xml-source/amanda-rest-server.8.xml: New man page.
	* man/Makefile.am (SERVER_MAN_PAGES): Add amanda-rest-server.8

2014-03-25  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amar.c (amar_file_size, amar_attr_size): New function to
	  return file and attribute size.
	* amar-src/amar.h (amar_file_size, amar_attr_size): Add prototype.
	* perl/Amanda/Archive.swg: Make them available to perl.
	* perl/Amanda/Archive.pod: Document them.
	* installcheck/Amanda_Archive.pl: Test the new method.

2014-03-24  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amtrmidx.c, server-src/planner.c: Fix memmory leak.

2014-03-24  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Warn if tapecycle <= runtapes.

2014-03-24  Jean-Louis Martineau <martineau@zmanda.com>
	* installcheck/taper.pl: Fix count of test.

2014-03-21  Jean-Louis Martineau <martineau@zmanda.com>
	* amar-src/amarchiver.c: Create parent directory on extraction.

2014-03-14  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/driver.c: Do not try to find holding space when no
	  holding disk are used.

2014-03-12  Jean-Louis Martineau <martineau@zmanda.com>